--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 	"require": {
 		"php": ">=5.2.4",
 		"almasaeed2010/adminlte": "^2.3",
-		"fzaninotto/faker": "^1.6"
+		"fzaninotto/faker": "^1.6",
+		"mpdf/mpdf": "^6.1"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
